Fixing z-index of home conatiner

--- a/css/app.css
+++ b/css/app.css
@@ -44,7 +44,6 @@ ul.accordion {
     background-repeat: no-repeat;
     height: 100vh;
     position: relative;
-    z-index: -1;
 }
 
 #logo
